fix dark mode

--- a/public/css/docs.css
+++ b/public/css/docs.css
@@ -15,12 +15,6 @@
     color: #969faf !important;
 }
 
-@media (prefers-color-scheme: dark) {
-    .DocSearch-Button {
-        background: #101829 !important;
-    }
-}
-
 .dark .DocSearch-Button {
     background: #101829 !important;
     border: 1px solid #1b2639 !important;
